feat(core): include property equity in dashboard net worth summary
DashboardService now queries PropertyRepository to calculate total
property equity (current_value - mortgage_balance) and includes it
in the net worth calculation. Properties appear as account summaries
with type "property" and contribute to the asset allocation breakdown.

Added tests for property-only, mixed investment+property, and empty
tenant scenarios.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>